[package]
name = "label"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
# Trim down features for tokio later
tokio = { version = "1.37.0", features = ["full"] }

# shared-types = { git = "https://github.com/mentics-ml-demo/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
# series-store = { git = "https://github.com/mentics-ml-demo/series-store.git", branch = "main" }
series-store = { path = "../series-store" }
# kv-store = { git = "https://github.com/mentics-ml-demo/kv-store.git", branch = "main" }
kv-store = { path = "../kv-store" }
intervals = "2.1.0"
